Updated layout issues on the home page

--- a/src/Components/AboutSection/AboutSection.scss
+++ b/src/Components/AboutSection/AboutSection.scss
@@ -1,9 +1,8 @@
 .about-section {
   border: 8px solid var(--gold);
-  // height: 131.6rem;
   background-color: #3a3c46;
   padding: 27rem 10.4rem 4rem;
-  margin-top: 42rem;
+  margin-top: 24rem;
 }
 
 .about-container {
