--- a/src/Components/ServicesSection/ServicesSection.scss
+++ b/src/Components/ServicesSection/ServicesSection.scss
@@ -1,11 +1,9 @@
 .services-section {
-  padding: 200px;
-  // padding-top: 0px;
+  padding-bottom: 200px;
 }
 
 .services-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  // padding: 50px;
 }
