--- a/src/Views/HomePage/HomePage.scss
+++ b/src/Views/HomePage/HomePage.scss
@@ -14,7 +14,7 @@
 .about-divider {
   transform: rotate(5deg);
   border-bottom: 8px solid var(--gold);
-  top: 55rem;
+  top: 32rem;
 }
 
 .homePage {
